Addid GUI to the game

--- a/index.html
+++ b/index.html
@@ -5,11 +5,29 @@
 	<title></title>
 
 	<!-- Javascript link for game logic -->
-	<script src="game.js"> 
 
-
+		<link rel="stylesheet" href="style.css">
 </head>
 <body>
+<div class="intro">
+	<h1>Rock Paper Scissors</h1>
+</div>
 
+<div>
+	<h2>Score</h2>
+	<div>
+		<p><span class="player-score">Player : 0 </span><span class="computer-score">Computer : 0 </span></p>
+	</div>
+</div>
+<div>
+	<button><img alt="rock" src="https://img.icons8.com/ios/100/000000/hand-rock.png"/></button>
+	<button><img alt="scissors" src="https://img.icons8.com/ios/100/000000/hand-scissors--v1.png"/></button>
+	<button><img alt="paper" src="https://img.icons8.com/ios/100/000000/hand.png"/></button>
+	<h4>Chose your weapon</h4>
+</div>
+
+<h3 class="cc"></h3>
+<h2 class="result"></h2>
 </body>
+	<script src="game.js"> </script>
 </html>
